@@ -17,10 +17,6 @@ chmod +x jre/linux/bin/*
 
 echo "Welcome to MapStore2!"
 
-# if not told otherwise pump up the permgen
-if [ -z "$JAVA_OPTS" ]; then
-  export JAVA_OPTS="-XX:MaxPermSize=128m"
-fi
 
 EXECUTABLE=startup.sh
 CATALINA_HOME="$PRGDIR"
@@ -35,6 +31,6 @@ fi
 sh "$CATALINA_HOME"/bin/"$EXECUTABLE" start "$@"
 echo "Waiting for Tomcat start and MapStore2 deploy..."
 sleep 4
-echo "Point your browser to: http://localhost:8082/mapstore"
+echo "Point your browser to: http://localhost:8080/mapstore"
 sleep 1
 echo "Enjoy MapStore2!"
